Added chinese zodiac, zodiac sign, favourite food, favourite movie, and favourite travel destination

--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -90,6 +90,43 @@
                     </div>
 
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                        <label for="about" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Chinese Zodiac</label>
+                        <div class="mt-1 sm:col-span-2 sm:mt-0">
+                            {{ form.chinese_zodiac }}
+                            <p class="mt-2 text-sm text-gray-500">Find out your chinese zodiac <a href="https://www.travelchinaguide.com/intro/social_customs/zodiac/">here</a></p>
+                        </div>
+                    </div>
+
+                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                        <label for="about" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Zodiac</label>
+                        <div class="mt-1 sm:col-span-2 sm:mt-0">
+                            {{ form.zodiac_sign }}
+                            <p class="mt-2 text-sm text-gray-500">Find out your zodiac sign <a href="https://www.travelchinaguide.com/intro/social_customs/zodiac/">here</a></p>
+                        </div>
+                    </div>
+
+                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                        <label for="first-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Favourite Food</label>
+                        <div class="mt-1 sm:col-span-2 sm:mt-0">
+                            {{ form.favourite_food }}
+                        </div>
+                    </div>
+
+                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                        <label for="first-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Favourite Movie</label>
+                        <div class="mt-1 sm:col-span-2 sm:mt-0">
+                            {{ form.favourite_movie }}
+                        </div>
+                    </div>
+
+                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                        <label for="first-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Favourite Travel Destination</label>
+                        <div class="mt-1 sm:col-span-2 sm:mt-0">
+                            {{ form.favourite_travel_destination }}
+                        </div>
+                    </div>
+
+                    <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="first-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">First name</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
                             {{ form.first_name }}
