Fixed URL for finding your zodiac sign

--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -101,7 +101,7 @@
                         <label for="about" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Zodiac</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
                             {{ form.zodiac_sign }}
-                            <p class="mt-2 text-sm text-gray-500">Find out your zodiac sign <a href="https://www.travelchinaguide.com/intro/social_customs/zodiac/">here</a></p>
+                            <p class="mt-2 text-sm text-gray-500">Find out your zodiac sign <a href="https://whatismysign.net">here</a></p>
                         </div>
                     </div>
 
