Added number of users to company settings

--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -42,7 +42,7 @@
             <div class="sm:flex sm:items-center">
                 <div class="sm:flex-auto">
                     <h2 class="text-lg font-medium text-gray-900">Users</h2>
-                    <p class="mt-2 text-sm text-gray-700">A list of all the users in your account including their name and email.</p>
+                    <p class="mt-2 text-sm text-gray-700">You currently have {{ company_users.count }} users</p>
                 </div>
             </div>
             <div class="mt-8 flex flex-col">
