--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -55,7 +55,7 @@
                                     <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
                                     <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Email</th>
                                     <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                                        <span class="sr-only">Remove</span>
+                                        <span class="sr-only">Controls</span>
                                     </th>
                                 </tr>
                                 </thead>
@@ -65,7 +65,26 @@
                                         <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">{{ company_user.name }}</td>
                                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">{{ company_user.email }}</td>
                                         <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                                            <a href="{% url 'remove_user' company_user.email_prefix %}" class="text-indigo-600 hover:text-indigo-900">Remove<span class="sr-only">, {{ company_user.name }}</span></a>
+                                            {% if company_user != user %}
+                                                <a href="{% url 'remove_user' company_user.email_prefix %}" class="text-red-600 hover:text-red-900">Remove</a>
+                                                {% if company_user in owners %}
+                                                    <form method="post" action="{% url 'remove_owner' company_user.email_prefix %}">
+                                                        {% csrf_token %}
+                                                        <button type="submit"
+                                                                class="text-red-600 hover:text-red-900">
+                                                            Remove Admin
+                                                        </button>
+                                                    </form>
+                                                {% else %}
+                                                    <form method="post" action="{% url 'make_owner' company_user.email_prefix %}">
+                                                        {% csrf_token %}
+                                                        <button type="submit"
+                                                                class="text-indigo-600 hover:text-indigo-900">
+                                                            Make Admin
+                                                        </button>
+                                                    </form>
+                                                {% endif %}
+                                            {% endif %}
                                         </td>
                                     </tr>
                                 {% endfor %}
