Updated tos and pp

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -91,12 +91,12 @@
             <div class="px-5 py-2">
                 <a href="{% url 'pricing' %}" class="text-base text-gray-500 hover:text-gray-900">Pricing</a>
             </div>
-            {#            <div class="px-5 py-2">#}
-            {#                <a href="{% url 'privacy_policy' %}" class="text-base text-gray-500 hover:text-gray-900">Privacy Policy</a>#}
-            {#            </div>#}
-            {#            <div class="px-5 py-2">#}
-            {#                <a href="{% url 'terms_of_service' %}" class="text-base text-gray-500 hover:text-gray-900">Terms of Service</a>#}
-            {#            </div>#}
+            <div class="px-5 py-2">
+                <a href="{% url 'privacy_policy' %}" class="text-base text-gray-500 hover:text-gray-900">Privacy Policy</a>
+            </div>
+            <div class="px-5 py-2">
+                <a href="{% url 'terms_of_service' %}" class="text-base text-gray-500 hover:text-gray-900">Terms of Service</a>
+            </div>
 
         </nav>
         <div class="mt-8 flex justify-center space-x-6">
