--- a/templates/companies/invite.html
+++ b/templates/companies/invite.html
@@ -17,7 +17,7 @@
                         <form method="post">
                             {% csrf_token %}
                             <div class="form-group">
-                                {{ company_form.name}}
+                                {{ form.email }}
                             </div>
                             <button class="btn btn-primary btn-sm" type='submit'>Invite</button>
                         </form>
