--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -44,6 +44,10 @@
                     <h2 class="text-lg font-medium text-gray-900">Users</h2>
                     <p class="mt-2 text-sm text-gray-700">You currently have {{ company_users.count }} users</p>
                 </div>
+                <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                    <a type="button" href="{% url 'invite' %}"
+                       class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Invite User</a>
+                </div>
             </div>
             <div class="mt-8 flex flex-col">
                 <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
