--- a/templates/email/invite.html
+++ b/templates/email/invite.html
@@ -452,7 +452,7 @@
     <![endif]-->
 </head>
 <body>
-<span class="preheader">{{ invite_sender_name }} with {{ invite_sender_organization_name }} has invited you to use [Product Name] to collaborate with them.</span>
+<span class="preheader">{{ invite_sender_name }} with {{ invite_sender_organization_name }} has invited you to use Team Bio to collaborate with them.</span>
 <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation">
     <tr>
         <td align="center">
@@ -472,8 +472,8 @@
                             <tr>
                                 <td class="content-cell">
                                     <div class="f-fallback">
-                                        <h1>Hi, {{ name }}!</h1>
-                                        <p>{{ invite_sender_name }} with {{ invite_sender_organization_name }} has invited you to use [Product Name] to collaborate with them. Use the button below to set up your account and get started:</p>
+                                        <h1>Howdy,</h1>
+                                        <p>{{ invite_sender_name }} with {{ invite_sender_organization_name }} has invited you to use Team Bio to collaborate with them. Use the button below to set up your account with the email you received this email at and get started:</p>
                                         <!-- Action -->
                                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                                             <tr>
@@ -490,11 +490,9 @@
                                                 </td>
                                             </tr>
                                         </table>
-                                        <p>If you have any questions for {{ invite_sender_name }}, you can reply to this email and it will go right to them. Alternatively, feel free to <a href="mailto:{{ support_email }}">contact our customer success team</a> anytime. (We're lightning quick at
-                                            replying.) We also offer <a href="{{ live_chat_url }}">live chat</a> during business hours.</p>
                                         <p>Welcome aboard,
-                                            <br>The [Product Name] team</p>
-                                        <p><strong>P.S.</strong> Need help getting started? Check out our <a href="{{ help_url }}">help documentation</a>.</p>
+                                            <br>The Team Bio team</p>
+                                        <p><strong>P.S.</strong> Need help getting started? Either reply to this email, or reach out to our fantastic support at support@team.bio</p>
                                         <!-- Sub copy -->
                                         <table class="body-sub" role="presentation">
                                             <tr>
