--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -64,6 +64,21 @@
                                 </tr>
                                 </thead>
                                 <tbody class="divide-y divide-gray-200 bg-white">
+                                {% for invited_user in invited_users %}
+                                    <tr>
+                                        <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">Invited User</td>
+                                        <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">{{ invited_user.email }}</td>
+                                        <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                                            <form method="post" action="{% url 'revoke_invite' invited_user.email %}">
+                                                {% csrf_token %}
+                                                <button type="submit"
+                                                        class="text-red-600 hover:text-red-900">
+                                                    Revoke Invite
+                                                </button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
                                 {% for company_user in company_users %}
                                     <tr>
                                         <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">{{ company_user.name }}</td>
