--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -12,7 +12,7 @@
 
         <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
             <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-                <form class="space-y-6" method="POST">
+                <form class="space-y-6" method="POST" action="{% url 'account_signup' %}">
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
                         <div class="mt-1">
