--- a/templates/_base.html
+++ b/templates/_base.html
@@ -153,7 +153,7 @@
 {% endblock javascript %}
 <!-- 100% privacy friendly analytics -->
 <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
-               referrerpolicy="no-referrer-when-downgrade"/></noscript>
+<script async src="https://scripts.simpleanalyticscdn.com/auto-events.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade"/></noscript>
 </body>
 </html>
