--- a/templates/companies/home.html
+++ b/templates/companies/home.html
@@ -2,6 +2,10 @@
 {% load static %}
 
 {% block title %}{{ user.company.name }} Home{% endblock title %}
+{% block head_scripts %}
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
+{% endblock head_scripts %}
 
 {% block content %}
     <div class="bg-white">
