--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -179,12 +179,40 @@
                                 </tr>
                                 </thead>
                                 <tbody class="divide-y divide-gray-200 bg-white">
+                                <div id="overlay" class="fixed hidden z-40 w-screen h-screen inset-0 bg-gray-900 bg-opacity-60"></div>
                                 {% for team in teams %}
                                     <tr>
                                         <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">{{ team.name }}</td>
                                         <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">{{ team.user_set.count }}</td>
-                                        <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                                        <td class="relative whitespace-nowrap py-4 pl-2 pr-4 text-center text-sm font-medium sm:pr-6">
                                             <a href="{% url 'update_team' team.pk %}" class="text-indigo-600 hover:text-indigo-900">Update<span class="sr-only">, {{ team.name }}</span></a>
+                                        </td>
+                                        <td class="relative whitespace-nowrap py-4 pl-2 pr-4 text-center text-sm font-medium sm:pr-6">
+                                            <button type="button" class="team-delete-button text-red-600 hover:text-red-900" data-modal-target="dialog-{{ team.id }}">Delete<span class="sr-only">, {{ team.name }}</span></button>
+                                            <div id="dialog-{{ team.id }}"
+                                                class="team-delete-modal hidden fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-96 bg-white rounded-md px-8 py-6 space-y-5 drop-shadow-lg">
+                                                <h1 class="text-2xl font-semibold">Confirmation of Deletion</h1>
+                                                <div class="py-5 border-t border-b border-gray-300">
+                                                    <p>Are you sure you want to delete this team: {{ team.name }}</p>
+                                                </div>
+                                                <div class="flex justify-around">
+                                                    <button
+                                                        id="close-{{ team.id }}"
+                                                        data-modal-target="dialog-{{ team.id }}"
+                                                        class="close-modal inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2
+                                                            text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500
+                                                            focus:ring-offset-2 sm:w-auto"
+                                                    >Close</button>
+                                                    <form method="post"  action="{% url 'delete_team' team.name %}">
+                                                        {% csrf_token %}
+                                                        <button type="submit"
+                                                                class="inline-flex items-center justify-center rounded-md border border-transparent bg-red-600
+                                                                    px-4 py-2 text-sm font-medium shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2
+                                                                    focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto text-white"
+                                                        >Yes, I'm sure</button>
+                                                    </form>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -195,5 +223,28 @@
                 </div>
             </div>
         </div>
+
+    <script>
+        const deleteButtons = document.querySelectorAll(".team-delete-button");
+        const closeButtons = document.querySelectorAll(".close-modal");
+        const modalElements = document.querySelectorAll(".team-delete-modal");
+        const overlayElement = document.querySelector("#overlay");
+
+        deleteButtons.forEach((element) => {
+            element.onclick = function() {
+                overlayElement.classList.remove("hidden");
+                const modal = document.querySelector(`#${element.dataset.modalTarget}`);
+                modal.classList.remove("hidden");
+            }
+        })
+
+        closeButtons.forEach((element) => {
+            element.onclick = function() {
+                overlayElement.classList.add("hidden");
+                const modal = document.querySelector(`#${element.dataset.modalTarget}`);
+                modal.classList.add("hidden");
+            }
+        })
+    </script>
     </main>
 {% endblock content %}
