--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -12,7 +12,7 @@
                         <div class="hidden sm:mb-8 sm:flex sm:justify-center">
                             <div class="relative overflow-hidden rounded-full py-1.5 px-4 text-sm leading-6 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
               <span class="text-gray-600">
-                Join now for free access. <a href="{% url 'account_signup' %}" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+                Join now <a href="{% url 'account_signup' %}" class="font-semibold text-indigo-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
               </span>
                             </div>
                         </div>
@@ -28,8 +28,19 @@
                                 {#                                    Live demo#}
                                 {#                                    <span class="text-gray-400" aria-hidden="true">&rarr;</span>#}
                                 {#                                </a>#}
+
+
+                            </div>
+                            <br>
+                            <div class="flex gap-x-4 sm:justify-center">
+                                <a href="https://www.producthunt.com/posts/team-bio?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-team&#0045;bio" target="_blank">
+                                    <img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=383039&theme=light"
+                                         alt="Team&#0032;Bio - Get&#0032;to&#0032;know&#0032;your&#0032;co&#0045;workers&#0032;like&#0032;never&#0032;before&#0033; | Product Hunt"
+                                         style="width: 250px; height: 54px;" width="250" height="54"/>
+                                </a>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
